--- a/Carrossel/hannah - Copy.html
+++ b/Carrossel/hannah - Copy.html
@@ -395,29 +395,31 @@
       overflow: visible;
       max-width: 100%;
     }
-    #main-circle-content {
-      position: absolute;
-      width: 200px;
-      height: 200px;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      border-radius: 50%;
-      background-color: #f2f2f2;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 18px;
-      color: #333;
-      text-align: center;
-      overflow: hidden;
-      box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
-    }
-    #main-circle-content img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
+   #main-circle-content {
+  position: absolute;
+  width: 180px; /* Reduzi um pouco para evitar cortes */
+  height: 180px; /* Ajustado proporcionalmente */
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+  background-color: transparent; /* Agora está transparente */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
+  color: #333;
+  text-align: center;
+  overflow: hidden;
+  box-shadow: none; /* Remove qualquer sombra branca */
+}
+
+#main-circle-content img {
+  width: 85%; /* Reduz um pouco para não ser cortado */
+  height: 85%;
+  object-fit: contain; /* Mantém o GIF visível sem cortes */
+  background-color: transparent !important; /* Garante que não haja fundo branco */
+}
 
     #circle {
       position: absolute;
@@ -1375,8 +1377,8 @@
         en: "© 2025 Hannah Foundation. All rights reserved."
       },
       "footer-info": {
-        pt: "Endereço: (Seu endereço completo) | E-mail: (Seu e-mail) | WhatsApp: (Seu telefone)",
-        en: "Address: (Your complete address) | Email: (Your email) | WhatsApp: (Your phone)"
+        pt: "Endereço: 106/18 moo 13 Piyaporn , Mae Sai District, Chiang Rai Province -Thailand - 57130 | E-mail: thailandhannahfoundation@gmail.com | WhatsApp: +66622634630",
+        en: "Address: 106/18 moo 13 Piyaporn , Mae Sai District, Chiang Rai Province -Thailand - 57130 | Email: thailandhannahfoundation@gmail.com | WhatsApp: +66622634630"
       },
 
       /* BOTÃO "SAIBA MAIS" NO MODAL */
@@ -1479,6 +1481,53 @@
           document.getElementById('modal').style.display = 'block';
           document.getElementById('modal-title').textContent = clickedTitle;
           document.getElementById('modal-text').textContent = clickedText;
+
+          // =================================
+          // MAPEAMENTO DOS NOMES PT/EN => KEYS
+          // =================================
+          const projetosMap = {
+            // MESMO PROJETO EM PT e EN => key (que a página 2 espera)
+            "Centro de Aprendizado HIS": "his",
+            "HIS Learning Center": "his",
+
+            "Mãos que Curam": "saude",
+            "Healing Hands": "saude",
+
+            "Mesa de Bênçãos": "food",
+            "Blessing Table": "food",
+
+            "Sementes de Sabedoria": "bolsa",
+            "Seeds of Wisdom": "bolsa",
+
+            "Lar de Siló": "abrigo",
+            "Shiloh’s Home": "abrigo",
+
+            "Plantação de Igrejas de Hannah": "igreja",
+            "Hannah’s Church Planting": "igreja",
+
+            "Colhendo Fé": "fazenda",
+            "Harvesting Faith": "fazenda",
+
+            "Curso de Inglês Hannah": "ingles",
+            "Hannah English Course": "ingles"
+          };
+
+          // Atualiza o link do botão "Saiba Mais" no modal
+          document.getElementById("modal-learn-more").addEventListener("click", function (event) {
+            event.preventDefault(); // Evita redirecionamento imediato
+
+            const projetoAtual = document.getElementById("modal-title").textContent.trim();
+            const lang = document.documentElement.getAttribute("lang") || "pt";
+
+            // Identifica a key do projeto
+            const projetoSlug = projetosMap[projetoAtual] || "default";
+
+            // Monta a URL com os parâmetros
+            const urlDestino = `projetos.html?projeto=${encodeURIComponent(projetoSlug)}&lang=${lang}`;
+
+            // Redireciona para a página de projetos
+            window.location.href = urlDestino;
+          });
 
           // Atualiza texto do botão "Saiba Mais / Learn More" conforme idioma atual
           const currentLang = document.documentElement.getAttribute('lang') || 'pt';
