--- a/Carrossel/hannah.html
+++ b/Carrossel/hannah.html
@@ -1218,6 +1218,17 @@
     </div>
   </section>
 
+<!-- PARCERIAS E APOIO -->
+  <section id="parceiros-apoio">
+    <h2>Parcerias e Apoio</h2>
+    <div class="parceiros-container">
+      <img src="imagens/apoio1.png" alt="Apoio 1" />
+      <img src="imagens/apoio2.png" alt="Apoio 2" />
+      <img src="imagens/apoio3.png" alt="Apoio 3" />
+      <img src="imagens/apoio4.png" alt="Apoio 4" />
+    </div>
+  </section>
+
   <!-- RODAPÉ -->
   <footer id="footer">
     <p id="footer-copy">© 2025 Fundação Hannah. Todos os direitos reservados.</p>
@@ -1370,6 +1381,12 @@
         en: "\"Volunteering here taught me that true wealth lies in serving others.\""
       },
       "depo2-footer": { pt: "– João, voluntário", en: "– João, volunteer" },
+
+/* PARCERIAS E APOIO */
+"parceiros-apoio-h2": { 
+  "pt": "Parcerias e Apoio", 
+  "en": "Partnerships and Support" 
+}
 
       /* RODAPÉ */
       "footer-copy": {
