--- a/Carrossel/hannah.html
+++ b/Carrossel/hannah.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
@@ -395,31 +395,31 @@
       overflow: visible;
       max-width: 100%;
     }
-   #main-circle-content {
-  position: absolute;
-  width: 180px; /* Reduzi um pouco para evitar cortes */
-  height: 180px; /* Ajustado proporcionalmente */
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  border-radius: 50%;
-  background-color: transparent; /* Agora está transparente */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 18px;
-  color: #333;
-  text-align: center;
-  overflow: hidden;
-  box-shadow: none; /* Remove qualquer sombra branca */
-}
+    #main-circle-content {
+      position: absolute;
+      width: 180px; /* Reduzi um pouco para evitar cortes */
+      height: 180px; /* Ajustado proporcionalmente */
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      border-radius: 50%;
+      background-color: transparent; /* Agora está transparente */
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 18px;
+      color: #333;
+      text-align: center;
+      overflow: hidden;
+      box-shadow: none; /* Remove qualquer sombra branca */
+    }
 
-#main-circle-content img {
-  width: 85%; /* Reduz um pouco para não ser cortado */
-  height: 85%;
-  object-fit: contain; /* Mantém o GIF visível sem cortes */
-  background-color: transparent !important; /* Garante que não haja fundo branco */
-}
+    #main-circle-content img {
+      width: 85%; /* Reduz um pouco para não ser cortado */
+      height: 85%;
+      object-fit: contain; /* Mantém o GIF visível sem cortes */
+      background-color: transparent !important; /* Garante que não haja fundo branco */
+    }
 
     #circle {
       position: absolute;
@@ -684,6 +684,35 @@
       margin-top: 8px;
     }
 
+    /* NOVA SEÇÃO PARCERIAS E APOIO */
+    #parcerias {
+      padding: 40px 20px;
+      background-color: #ffffff;
+      text-align: center;
+    }
+    #parcerias-h2 {
+      font-family: 'Montserrat', sans-serif;
+      font-weight: 700;
+      color: var(--primaria);
+      margin-bottom: 20px;
+      font-size: 2rem;
+    }
+    .parcerias-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
+      gap: 20px;
+    }
+    .parcerias-container img {
+      max-width: 200px;
+      width: 100%;
+      height: auto;
+      border-radius: 8px;
+      object-fit: cover;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+
     /* RODAPÉ */
     footer {
       background-color: var(--primaria);
@@ -803,6 +832,18 @@
         flex-direction: column;
         align-items: center;
       }
+      #parcerias {
+        padding: 20px 10px;
+      }
+      #parcerias-h2 {
+        font-size: 1.6rem;
+      }
+      .parcerias-container {
+        gap: 10px;
+      }
+      .parcerias-container img {
+        max-width: 150px;
+      }
       footer {
         padding: 20px 10px 100px 10px; /* Mantém espaço extra no rodapé */
       }
@@ -861,11 +902,11 @@
       </ul>
     </nav>
 
-  <div class="cta-header">
-  <button id="nav-doar" onclick="window.location.href='https://hannahenglishcourse.vercel.app/Carrossel/doe.html'">
-    Doe Agora
-  </button>
-</div>
+    <div class="cta-header">
+      <button id="nav-doar" onclick="window.location.href='https://hannahenglishcourse.vercel.app/Carrossel/doe.html'">
+        Doe Agora
+      </button>
+    </div>
 
     <!-- NOVO SELETOR DE IDIOMA -->
     <div class="lang-switch">
@@ -882,10 +923,10 @@
     </div>
   </header>
 
- <!-- Botão flutuante (mobile) -->
-<button class="donate-float-mobile" onclick="window.location.href='https://hannahenglishcourse.vercel.app/Carrossel/doe.html'">
-  Doe Agora
-</button>
+  <!-- Botão flutuante (mobile) -->
+  <button class="donate-float-mobile" onclick="window.location.href='https://hannahenglishcourse.vercel.app/Carrossel/doe.html'">
+    Doe Agora
+  </button>
 
   <!-- HERO -->
   <section id="hero">
@@ -1218,14 +1259,14 @@
     </div>
   </section>
 
-<!-- PARCERIAS E APOIO -->
-  <section id="parceiros-apoio">
-    <h2>Parcerias e Apoio</h2>
-    <div class="parceiros-container">
-      <img src="imagens/apoio1.png" alt="Apoio 1" />
-      <img src="imagens/apoio2.png" alt="Apoio 2" />
-      <img src="imagens/apoio3.png" alt="Apoio 3" />
-      <img src="imagens/apoio4.png" alt="Apoio 4" />
+  <!-- NOVA SEÇÃO PARCERIAS E APOIO (ANTES DO RODAPÉ) -->
+  <section id="parcerias">
+    <h2 id="parcerias-h2">Parcerias e Apoio</h2>
+    <div class="parcerias-container">
+      <img src="imagens/apoio1.png" alt="Apoio 1">
+      <img src="imagens/apoio2.png" alt="Apoio 2">
+      <img src="imagens/apoio3.png" alt="Apoio 3">
+      <img src="imagens/apoio4.png" alt="Apoio 4">
     </div>
   </section>
 
@@ -1382,11 +1423,11 @@
       },
       "depo2-footer": { pt: "– João, voluntário", en: "– João, volunteer" },
 
-/* PARCERIAS E APOIO */
-"parceiros-apoio-h2": { 
-  "pt": "Parcerias e Apoio", 
-  "en": "Partnerships and Support" 
-}
+      /* NOVA SEÇÃO PARCERIAS E APOIO */
+      "parcerias-h2": {
+        pt: "Parcerias e Apoio",
+        en: "Partnerships and Support"
+      },
 
       /* RODAPÉ */
       "footer-copy": {
