--- a/Carrossel/hannah.html
+++ b/Carrossel/hannah.html
@@ -218,18 +218,25 @@
       padding: 0 20px;
       margin: 0 auto;
     }
-    #hero .hero-text h1 {
-      font-family: 'Montserrat', sans-serif;
-      font-weight: 700;
-      margin-bottom: 15px;
-      font-size: 2rem;
-      color: #ffffff;
-    }
-    #hero .hero-text p {
-      margin-bottom: 20px;
-      font-size: 1.1rem;
-      color: #ffffff;
-    }
+   #hero .hero-text h1 {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+  margin-bottom: 15px;
+  font-size: 2rem;
+  color: #ffffff;
+  background-color: rgba(0, 0, 0, 0.4); /* Fundo preto transparente */
+  padding: 20px;
+  border-radius: 10px;
+}
+
+#hero .hero-text p {
+  margin-bottom: 20px;
+  font-size: 1.1rem;
+  color: #ffffff;
+  background-color: rgba(0, 0, 0, 0.4); /* Fundo preto transparente */
+  padding: 10px 20px;
+  border-radius: 8px;
+}
     #hero .hero-text button {
       background-color: var(--primaria);
       color: var(--texto-claro);
