--- a/Carrossel/impacto.html
+++ b/Carrossel/impacto.html
@@ -408,7 +408,7 @@
   <!-- BANNER PARALLAX "Histórias do Campo Missionário" -->
   <section class="banner-impacto">
     <h1 id="banner-h1">Histórias do Campo Missionário</h1>
-    <p id="banner-p">Conheça histórias reais de transformação, carregadas dinamicamente a partir de arquivos .txt.</p>
+    <p id="banner-p">Conheça histórias reais de transformação</p>
   </section>
 
   <!-- SEÇÃO HISTÓRIAS (DINÂMICO) -->
