--- a/Carrossel/impacto.html
+++ b/Carrossel/impacto.html
@@ -476,8 +476,8 @@
         en: "Mission Field Stories"
       },
       "banner-p": {
-        pt: "Conheça histórias reais de transformação, carregadas dinamicamente a partir de arquivos .txt.",
-        en: "Discover real-life stories of transformation, loaded dynamically from .txt files."
+        pt: "Conheça histórias reais de transformação.",
+        en: "Discover real-life stories of transformation."
       },
       "btn-compartilhar-pagina": {
         pt: "Compartilhe esta página",
