--- a/Carrossel/impacto.html
+++ b/Carrossel/impacto.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
@@ -293,7 +293,7 @@
       background-color: var(--secundaria);
     }
 
-    /* RODAPÉ (igual ao original) */
+    /* RODAPÉ (mesmo estilo) */
     footer {
       background-color: var(--primaria);
       color: var(--texto-claro);
@@ -422,7 +422,11 @@
     <div class="filtros-historias">
       <button id="filtro-todas">Todas</button>
       <button id="filtro-criancas">Crianças</button>
-      <!-- Adicione mais categorias se quiser -->
+      <button id="filtro-familias">Famílias</button>
+      <button id="filtro-missionarios">Missionários</button>
+      <button id="filtro-refugiados">Refugiados</button>
+      <button id="filtro-milagres">Milagres</button>
+      <button id="filtro-educacao">Educação</button>
     </div>
 
     <!-- Grade de Histórias -->
@@ -483,8 +487,34 @@
         pt: "Compartilhe esta página",
         en: "Share this page"
       },
-      "filtro-todas": { pt: "Todas", en: "All" },
-      "filtro-criancas": { pt: "Crianças", en: "Children" },
+      "filtro-todas": {
+        pt: "Todas",
+        en: "All"
+      },
+      "filtro-criancas": {
+        pt: "Crianças",
+        en: "Children"
+      },
+      "filtro-familias": {
+        pt: "Famílias",
+        en: "Families"
+      },
+      "filtro-missionarios": {
+        pt: "Missionários",
+        en: "Missionaries"
+      },
+      "filtro-refugiados": {
+        pt: "Refugiados",
+        en: "Refugees"
+      },
+      "filtro-milagres": {
+        pt: "Milagres",
+        en: "Miracles"
+      },
+      "filtro-educacao": {
+        pt: "Educação",
+        en: "Education"
+      }
     };
 
     function changeLanguage(lang) {
@@ -569,16 +599,15 @@
         const resumo = (lang === 'pt') ? h.resumoPT : h.resumoEN;
         const card = document.createElement("div");
         card.className = "card-historia";
-        card.innerHTML = `
-          <img src="impacto/${h.id}/${h.imagemLista}" alt="${titulo}">
+        card.innerHTML = 
+          `<img src="impacto/${h.id}/${h.imagemLista}" alt="${titulo}">
           <div class="conteudo">
             <h3>${titulo}</h3>
             <p>${resumo}</p>
             <button onclick="abrirHistoria('${h.id}')">
               ${ (lang === 'pt') ? 'Leia Mais' : 'Read More' }
             </button>
-          </div>
-        `;
+          </div>`;
         grid.appendChild(card);
       });
     }
@@ -633,6 +662,11 @@
       // Eventos de filtro
       document.getElementById('filtro-todas').addEventListener('click', () => filtrarHistorias('todas'));
       document.getElementById('filtro-criancas').addEventListener('click', () => filtrarHistorias('criancas'));
+      document.getElementById('filtro-familias').addEventListener('click', () => filtrarHistorias('familias'));
+      document.getElementById('filtro-missionarios').addEventListener('click', () => filtrarHistorias('missionarios'));
+      document.getElementById('filtro-refugiados').addEventListener('click', () => filtrarHistorias('refugiados'));
+      document.getElementById('filtro-milagres').addEventListener('click', () => filtrarHistorias('milagres'));
+      document.getElementById('filtro-educacao').addEventListener('click', () => filtrarHistorias('educacao'));
 
       // Botão compartilhar
       document.getElementById('btn-compartilhar-pagina').addEventListener('click', shareThisPage);
