--- a/Carrossel/impacto.html
+++ b/Carrossel/impacto.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
@@ -535,7 +535,8 @@
 
     /* FETCH DO .TXT E PARSE DOS METADADOS */
     async function carregarMetadadosHistoria(id) {
-      const url = `impacto/${id}/${id}.txt`;
+      // AJUSTE: agora buscamos "historia.txt" em vez de `${id}.txt`
+      const url = `impacto/${id}/historia.txt`;
       const response = await fetch(url);
       const fullText = await response.text();
 
@@ -559,6 +560,8 @@
           info.id = trimmed.replace("ID:", "").trim();
         } else if (trimmed.startsWith("CATEGORIAS:")) {
           let cats = trimmed.replace("CATEGORIAS:", "").trim();
+          // Se você quiser forçar tudo em minúsculo, pode usar:
+          // cats = cats.toLowerCase();
           info.categorias = cats.split(",").map(c => c.trim());
         } else if (trimmed.startsWith("IMAGEM_LISTA:")) {
           info.imagemLista = trimmed.replace("IMAGEM_LISTA:", "").trim();
@@ -612,9 +615,10 @@
       });
     }
 
-    /* ABRIR PÁGINA historia.html?id=xxx */
+    /* ABRIR PÁGINA historia.html?id=xxx E PASSAR O IDIOMA */
     function abrirHistoria(historiaId) {
-      window.location.href = `historia.html?id=${historiaId}`;
+      const lang = document.documentElement.getAttribute("lang");
+      window.location.href = `historia.html?id=${historiaId}&lang=${lang}`;
     }
 
     /* FILTRAR POR CATEGORIA */
@@ -622,6 +626,8 @@
       if (cat === 'todas') {
         mostrarHistorias(metadadosGlobal);
       } else {
+        // Aqui precisa bater EXATAMENTE com o que está no .txt
+        // Exemplo: se no .txt estiver "criancas", "familias"...
         const filtradas = metadadosGlobal.filter(h => h.categorias.includes(cat));
         mostrarHistorias(filtradas);
       }
